[package]
name = "bevy_fpc"
description = "First person controller plugin for the Bevy game-engine"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
categories.workspace = true
repository.workspace = true
keywords = ["gamedev","controller","first-person","bevy","plugin"]
exclude = ["/assets"]

[dependencies]
log = { workspace = true }
bevy = { workspace = true }
bevy_rapier3d = { workspace = true }
bevy_fpc_core = { workspace = true }
bevy_fpc_sprint = { path = "features/bevy_fpc_sprint", version = "0.1", optional = true }

["dev-dependencies"]
bevy = { workspace = true, features = ["bevy_asset", "bevy_gltf", "bevy_render", "png", "bevy_pbr"] }
bevy_rapier3d = { workspace = true, features = ["simd-stable", "parallel", "debug-render"] }

[features]
default = ["bevy_fpc_sprint"]

[workspace]
members = ["features/*"]

[workspace.dependencies]
bevy_fpc_core = { path = "features/bevy_fpc_core", version = "0.1" }
bevy = { version = "0.10", default-features = false, features = ["bevy_winit", "bevy_core_pipeline"] }
bevy_rapier3d = { version = "0.21", default-features = false, features = ["dim3", "async-collider"] }
log = "0.4"

[workspace.package]
authors = ["Thomas 'Eternahl' ROLLIN"]
edition = "2021"
license = "Apache-2.0 OR MIT"
repository = "https://codeberg.org/Eternahl/bevy_fpc"
categories = ["game-development", "game-engines"]

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Improve performances in releases build (Rapier)
[profile.release]
codegen-units = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[[example]]
name = "basic"
