[package]
name = "bevy_fpc_core"
description = "Core features for `bevy_fpc`"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
categories.workspace = true
repository.workspace = true

[dependencies]
bevy = { workspace = true }
bevy_rapier3d = { workspace = true }

