[package]
name = "bevy_fpc_sprint"
description = "Sprinting feature for `bevy_fpc`"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
categories.workspace = true
repository.workspace = true

[dependencies]
bevy = { workspace = true }
bevy_rapier3d = { workspace = true }
log = { workspace = true }
bevy_fpc_core = { workspace = true }

